--- a/requirements.txt
+++ b/requirements.txt
@@ -15,6 +15,13 @@ urllib3>=2.0.7
 # Command line interface
 argparse
 
+# Flask and related libraries for API
+Flask>=2.0.0
+validators>=0.18.2 # Added for URL validation
+Flask-Limiter>=2.0.0 # Added for rate limiting
+Flask-SQLAlchemy>=2.5.1 # Added for SQLAlchemy ORM
+SQLAlchemy>=1.4.0 # Core SQLAlchemy library
+
 # Logging (built-in)
 # urllib.robotparser (built-in)
 # json (built-in)
